--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,5 +1,5 @@
 body {
-font-size: 12px;
+font-size: 16px;
 color: #F0F0F0;
 font-family: Times, "Times New Roman", serif;
 background: #262626;
@@ -7,7 +7,7 @@ margin: 24px;
 }
 
 p {
-line-height: 18px;
+line-height: 20px;
 }
 
 
@@ -22,4 +22,7 @@ font-size: 1.5em;
 font-variant: small-caps;
 }
 
-
+a {
+	color: #F0F0F0;
+	text-decoration: underline;
+}
